--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,9 @@
         <button>Login</button>
     </div>
     <div>
-        <button id="note">Get Info</button>        
+        <button id="note">Get Info</button>
+        <button id="note1">Post Note</button>
+        <button id="note2">Get Note</button>
     </div>
     <script src="./main.js"></script>
 </body>
